--- a/demo_on_benchmark_functions.ipynb
+++ b/demo_on_benchmark_functions.ipynb
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method hartman_3d.func of <bayes_opt.functions.hartman_3d object at 0x000001E77AB11F88>>\n",
+      "<bound method hartman_3d.func of <bayes_opt.functions.hartman_3d object at 0x0000029052CE1D88>>\n",
       "f([0,0,0])= [[0.06797412]]\n",
       "f([1,1,1])= [[0.30047607]]\n",
       "Search space: [(0, 1), (0, 1), (0, 1)]\n",
@@ -151,9 +151,9 @@
    "source": [
     "if 'kov' in acq_name or acq_name == 'erm' or acq_name == 'cbm':\n",
     "    bo=BayesOpt_KnownOptimumValue(myfunction.func,myfunction.bounds,fstar=myfunction.fstar, \\\n",
-    "                              acq_name=acq_name,IsTGP=1,verbose=1)\n",
+    "                              acq_name=acq_name,IsTGP=1,verbose=0)\n",
     "else:\n",
-    "    bo=BayesOpt(myfunction.func,myfunction.bounds,acq_name=acq_name,verbose=1)\n",
+    "    bo=BayesOpt(myfunction.func,myfunction.bounds,acq_name=acq_name,verbose=0)\n",
     "            \n",
     "if IsTGP==1: \n",
     "    print(\"using transform GP with the known optimum value\")\n",
@@ -193,9 +193,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "estimated lengthscale [0.01]\n",
-      "y_lcb=[[-7.07210804]] y_ucb=[[4.94254969]] fstar_scaled=5.1699\n",
-      "EI\n",
       "recommended x=[0.384657   0.3368261  0.75005615] current y=-2.095, ymin=-2.095\n",
       "recommended x=[0.43159522 0.36379535 0.73276084] current y=-2.110, ymin=-2.110\n",
       "recommended x=[0.41619775 0.3544163  0.73834301] current y=-2.108, ymin=-2.110\n",
@@ -205,7 +202,6 @@
       "recommended x=[0.36415738 0.55131567 0.85536154] current y=-3.826, ymin=-3.826\n",
       "recommended x=[0.35480693 0.57682775 0.87192066] current y=-3.779, ymin=-3.826\n",
       "recommended x=[0.36000329 0.54980969 0.85844176] current y=-3.824, ymin=-3.826\n",
-      "estimated lengthscale [0.15268487]\n",
       "recommended x=[0.37093805 0.55803245 0.85171427] current y=-3.824, ymin=-3.826\n",
       "recommended x=[0.36855172 0.552578   0.85883905] current y=-3.822, ymin=-3.826\n",
       "recommended x=[0.34843778 0.56015269 0.83572862] current y=-3.801, ymin=-3.826\n",
@@ -215,7 +211,6 @@
       "recommended x=[0.36252407 0.55498718 0.85190499] current y=-3.827, ymin=-3.827\n",
       "recommended x=[0.36248743 0.55473539 0.85181354] current y=-3.827, ymin=-3.827\n",
       "recommended x=[0.3625371  0.55469467 0.8518277 ] current y=-3.827, ymin=-3.827\n",
-      "estimated lengthscale [0.13327137]\n",
       "recommended x=[0.36252537 0.55480723 0.85177649] current y=-3.827, ymin=-3.827\n",
       "recommended x=[0.36242922 0.55473456 0.85195101] current y=-3.827, ymin=-3.827\n",
       "recommended x=[0.36192545 0.55462275 0.85216125] current y=-3.827, ymin=-3.827\n",
@@ -225,7 +220,6 @@
       "recommended x=[0.28064188 0.55838759 0.85059844] current y=-3.845, ymin=-3.845\n",
       "recommended x=[0.27632285 0.56210616 0.85131018] current y=-3.845, ymin=-3.845\n",
       "recommended x=[0.28270766 0.55872616 0.85331348] current y=-3.845, ymin=-3.845\n",
-      "estimated lengthscale [0.11437224]\n",
       "recommended x=[0.28550892 0.56001739 0.85162158] current y=-3.844, ymin=-3.845\n",
       "recommended x=[0.26029522 0.557922   0.85513025] current y=-3.849, ymin=-3.849\n",
       "recommended x=[0.21746732 0.55512481 0.86471462] current y=-3.842, ymin=-3.849\n"
