--- a/run_all_benchmark_functions.ipynb
+++ b/run_all_benchmark_functions.ipynb
@@ -20,9 +20,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ay89j7tSQJ-L",
-        "outputId": "5fb5f110-f47d-4103-9cec-7d106de32315"
+        "outputId": "e5360057-e3bb-406b-bf79-4bc9848fe9be"
       },
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -30,22 +30,15 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/ntienvu/KnownOptimum_BO\n",
-            "  Cloning https://github.com/ntienvu/KnownOptimum_BO to /tmp/pip-req-build-h3jcj3vz\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/ntienvu/KnownOptimum_BO /tmp/pip-req-build-h3jcj3vz\n",
-            "  Resolved https://github.com/ntienvu/KnownOptimum_BO to commit 3842d788f32bc2dbc4ffb8a40403db7cbaddfbd6\n",
+            "  Cloning https://github.com/ntienvu/KnownOptimum_BO to /tmp/pip-req-build-77ol_qz1\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/ntienvu/KnownOptimum_BO /tmp/pip-req-build-77ol_qz1\n",
+            "  Resolved https://github.com/ntienvu/KnownOptimum_BO to commit 43caf011de39b96224c0552252ccf3cbe06df813\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy>=1.9.0 in /usr/local/lib/python3.8/dist-packages (from bayes-opt==1) (1.22.4)\n",
             "Requirement already satisfied: scipy>=0.14.0 in /usr/local/lib/python3.8/dist-packages (from bayes-opt==1) (1.10.1)\n",
             "Requirement already satisfied: scikit-learn>=0.16.1 in /usr/local/lib/python3.8/dist-packages (from bayes-opt==1) (1.2.1)\n",
             "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-learn>=0.16.1->bayes-opt==1) (1.2.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn>=0.16.1->bayes-opt==1) (3.1.0)\n",
-            "Building wheels for collected packages: bayes-opt\n",
-            "  Building wheel for bayes-opt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for bayes-opt: filename=bayes_opt-1-py3-none-any.whl size=26702 sha256=2a16573e84798f79eddaa035d244f888b53f35923cb31554135c9c075de2c8cb\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-attyx3jq/wheels/fc/e7/01/64e71eaf7b92e180fef61312d66312b1b711723eac7d45de31\n",
-            "Successfully built bayes-opt\n",
-            "Installing collected packages: bayes-opt\n",
-            "Successfully installed bayes-opt-1\n"
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn>=0.16.1->bayes-opt==1) (3.1.0)\n"
           ]
         }
       ]
@@ -61,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 31,
       "metadata": {
         "id": "cZUOpjt7QFyr"
       },
@@ -77,6 +70,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Check numpy and scipy version\n",
+        "\n",
+        "import scipy\n",
+        "\n",
+        "print(np.__version__)\n",
+        "print(scipy.__version__)\n",
+        "\n",
+        "# !pip install 'scipy>=1.9.0,<1.9.2'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kNjurwmxDBQV",
+        "outputId": "b6d7aaeb-c995-4694-854f-0d70d683f9cf"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.22.4\n",
+            "1.10.1\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Select a function to run the experiment"
@@ -87,27 +111,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 33,
       "metadata": {
         "id": "nyc_xU8TQFyt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc97fe61-4e43-44ff-911e-8b4c2b3b9d82"
+        "outputId": "875d9d0c-c852-40b2-d094-8e3adf37373d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "func: ackley\n"
+            "func: hartman_3d\n"
           ]
         }
       ],
       "source": [
         "#myfunction=functions.branin()\n",
-        "#myfunction=functions.hartman_3d()\n",
-        "myfunction=functions.ackley(input_dim=5)\n",
+        "myfunction=functions.hartman_3d()\n",
+        "#myfunction=functions.ackley(input_dim=5)\n",
         "#myfunction=functions.alpine1(input_dim=5)\n",
         "#myfunction=functions.gSobol(a=np.array([1,1,1,1,1]))\n",
         "#myfunction=functions.hartman_6d()\n",
@@ -162,7 +186,7 @@
       "metadata": {
         "id": "yw4_T3V6V_Cm"
       },
-      "execution_count": 4,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -182,7 +206,7 @@
       "execution_count": null,
       "metadata": {
         "id": "GQnvei3yQFyx",
-        "outputId": "3846e019-6dd8-4ea4-9923-b389763e8b16",
+        "outputId": "1bed44f4-3973-4732-a600-65347e9ac6dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -193,12 +217,15 @@
           "name": "stdout",
           "text": [
             "==================acquisition type {'name': 'erm', 'IsTGP': 1}\n",
-            "ii=0 Best Found Value=4.508\n",
-            "ii=1 Best Found Value=4.026\n",
-            "ii=2 Best Found Value=4.604\n",
-            "ii=3 Best Found Value=3.121\n",
-            "ii=4 Best Found Value=4.762\n",
-            "ii=5 Best Found Value=3.249\n"
+            "ii=0 Best Found Value=-3.798\n",
+            "ii=1 Best Found Value=-3.833\n",
+            "ii=2 Best Found Value=-3.847\n",
+            "ii=3 Best Found Value=-3.802\n",
+            "ii=4 Best Found Value=-3.825\n",
+            "ii=5 Best Found Value=-3.784\n",
+            "ii=6 Best Found Value=-3.780\n",
+            "ii=7 Best Found Value=-3.860\n",
+            "ii=8 Best Found Value=-3.817\n"
           ]
         }
       ],
@@ -253,7 +280,7 @@
         "    y_best_sofar=[0]*len(bo)\n",
         "    for uu,mybo in enumerate(bo):\n",
         "        y_best_sofar[uu]=[ (myfunction.fstar - np.max(mybo.Y_ori[:ii+1]) ) for ii in range(len(mybo.Y_ori))]\n",
-        "        y_best_sofar[uu]=y_best_sofar[uu][3*myfunction.input_dim:] # remove the random phase for plotting purpose\n",
+        "        y_best_sofar[uu]=y_best_sofar[uu][3*myfunction.input_dim-1:] # remove the random phase for plotting purpose\n",
         "        \n",
         "    y_best_sofar=np.asarray(y_best_sofar)\n",
         "    xaxis=range(y_best_sofar.shape[1])\n",
